# Lazy

./: .ctagsignore  .gitignore  .gitmodules  CMakeLists.txt  Engine.h  README.md  core.cpp  core.h  engine.cpp  log.cpp  log.h  main.cpp  pch.h  structs.h  types.h  utils.cpp  utils.h  window.cpp  window.h
Lazy/: CMakeLists.txt
Lazy/Core/: Frame.cpp  Frame.h  Renderer.cpp  Viewer.cpp  Viewer.h
Lazy/Graphics/: Quad.cpp  Quad.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Lazy/Graphics/ShaderSrc/: RenderQuad.fs
Lazy/Math/: Color.h  Vec2.cpp  Vec2.h  Vec3.cpp
Lazy/Primitives/: Primitive.h  Ray.h
Lazy/vender/: CMakeLists.txt
Lazy/vender/glad/: CMakeLists.txt
Lazy/vender/glad/include/glad/: glad.h
Lazy/vender/glad/src/: glad.c
old/: color.cpp  color.h  old_main.cpp  ray.cpp  ray.h  vec3.h
old/Lazy/Camera/: Camera.cpp  Camera.h
old/Lazy/Core/: Frame.cpp  Frame.h  Renderer.h  Viewer.cpp  Viewer.h
old/Lazy/Graphics/ShaderSrc/: RenderQuad.vs
old/Lazy/Math/: Color.cpp  Color.h  Point3.h  Vec3.h
old/Lazy/Primitives/: Sphere.cpp  Sphere.h
shaders/: shader.vert
vender/: CMakeLists.txt
